# speech_to_text

./: README.md  app.py  battery_status.py  pyproject.toml
old/: test_microphone.py
static/css/: style.css
static/js/: app.js
templates/: index.html
